--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.html
@@ -54,7 +54,7 @@
   <div class="col-md-6">
     <div class="row">
       <div class="col-md-12">
-        <h5 *ngIf="ordenes?.length > 0"> Ordenes Pendientes</h5>
+        <h5 *ngIf="ordenes?.length > 0"> Ordenes</h5>
         <table class="table text-center" id="tablaOrdenes" *ngIf="ordenes?.length > 0">
           <thead class="thead-dark">
             <tr>
