--- a/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.css
+++ b/src/app/components/vistaProyectos/verProyecto/ver-proyecto.component.css
@@ -9,8 +9,8 @@
     max-width: 16px; 
 }
 
-.table td, .table th {
-    padding: .5rem;
+.table td, .table th, .table tr  {
+   /* padding: .5rem;*/
     vertical-align: top;
     border-top: 1px solid #dee2e6;
   }
