--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,5 +3,12 @@
     <p class="text-white my-2">
       &copy; Azahara Fernández e Isabel Núñez
     </p>
+
+    <small  class=" text-white">Icons made by 
+        <a  class= "text-success"  href="https://www.freepik.com/" title="Freepik">Freepik</a> from
+        <a  class= "text-success"  href="https://www.flaticon.es/" title="Flaticon">www.flaticon.com</a> is licensed by 
+        <a  class= "text-success"  href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+    </small>
   </div>
+  
 </footer>
